# ACP-Bridge

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
examples/: local.yaml  relay.yaml  worker.yaml
src/acp_bridge/: __init__.py  agent_profiles.py  cli.py  config.py  local_client.py  mcp_server.py  process_runner.py  protocol.py  relay.py  worker.py  workspace.py
tests/: test_agent_profiles.py  test_cli.py  test_config.py  test_local_client.py  test_mcp_server.py  test_process_runner.py  test_protocol.py  test_relay_integration.py  test_worker.py  test_workspace.py
